# eve

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md
cmake/: compiler_flags.cmake
config/: platform.json  platform.live.json
docs/: README.md
docs/0000-core-platform-specifications/: README.md  eve-0000-vision-and-design-philosophy.md  eve-0001-system-architecture.md  eve-0002-capability-specification.md  eve-0003-service-layer-specification.md  eve-0004-knowledge-layer-specification.md  eve-0005-context-builder-specification.md  eve-0006-context-package-specification.md  eve-0007-ai-provider-specification.md  eve-0008-personality-specification.md  eve-0009-documentation-integration-specification.md  eve-0010-platform-request-specification.md  eve-0011-platform-response-specification.md  eve-0011-response-object-specification.md  eve-0012-validation-specification.md
docs/0100-discord-specifications/: README.md  eve-0100-discord-interface-specification.md  eve-0101-discord-command-mapping.md  eve-0102-discord-permissions.md  eve-0103-discord-embeds-and-formatting.md
docs/0200-website-specifications/: README.md
docs/0300-cli-specifications/: README.md
docs/0400-rest-api-specifications/: README.md
docs/0500-platform-specifications/: README.md
docs/0600-reference-catalogs/: README.md  eve-0600-discord-command-catalog.md  eve-0601-website-route-catalog.md  eve-0602-cli-command-catalog.md  eve-0603-rest-api-endpoint-catalog.md  eve-0604-capability-catalog.md  eve-0605-service-catalog.md  eve-0606-knowledge-object-catalog.md  eve-0607-ai-provider-catalog.md  eve-0608-repository-catalog.md  eve-0609-document-catalog.md
docs/0700-testing-specifications/: README.md
docs/0800-deployment-specifications/: README.md
docs/0900-security-specifications/: README.md
docs/1000-implementation-guides/: README.md  eve-1000-implementation-roadmap.md  eve-1011-knowledge-engine-implementation-guide.md
docs/2000-developer-guides/: README.md
docs/3000-architecture-decision-records/: README.md
docs/9000-archive/: README.md
docs/adr/: adr-0001-documentation-first-development.md
ideas/: distributed-capability-network.md
include/eve/ai/: http_transport.hpp  ollama_provider.hpp  provider_formatting.hpp  (+1 more)
tests/: CMakeLists.txt  capability_engine_test.cpp  citation_engine_test.cpp  context_assembler_test.cpp  context_package_test.cpp  contract_compliance_test.cpp  integration_test.cpp  knowledge_graph_test.cpp  knowledge_index_test.cpp  knowledge_object_builder_test.cpp  knowledge_store_test.cpp  live_ollama_integration_test.cpp  markdown_parser_test.cpp  metadata_extractor_test.cpp  platform_request_test.cpp  platform_response_test.cpp  provider_formatter_test.cpp  ranking_engine_test.cpp  relationship_builder_test.cpp  repository_discovery_test.cpp  search_engine_test.cpp  validation_engine_test.cpp
(+76 files in other folders)
